# Browser-Agent-Runtime-Platform

./: .gitignore  开发流程.md  最终目标.md  框架结构图.md  模块文档.md  需求文档.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  API接口文档.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260609_1356_add_user_preferences_and_memory_metadata.py  20260610_add_checkpoint_new_fields.py  20260611_add_agents_table_and_tasks_agent_id.py  20260611_v25_observability_human_collab.py  4f8a2c1b3d5e_add_task_status_check_constraint.py  6dbf55_phase1_initial_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: agents.py  auth.py  health.py  preferences.py  stats.py  tasks.py
backend/app/core/: config.py  deps.py  exception_handlers.py  lifespan.py  llm_pricing.yaml  logging.py  security.py  state.py
backend/app/infra/: llm.py  postgres.py  redis.py  s3.py
backend/app/model/: __init__.py  agent.py  base.py  checkpoint.py  memory.py  preference_history.py  session.py  task.py  task_step.py  user.py  user_preference.py
backend/app/repository/: __init__.py  agent.py  checkpoint.py  memory.py  session.py  task.py  task_step.py  user.py  user_preference.py
backend/app/runtime/: __init__.py  checkpoint_manager.py  event_bus.py  policy_engine.py  react_engine.py  rehydrate.py  task_runner.py  task_state.py  timeline_recorder.py  trajectory.py  watchdog.py  ws_manager.py
backend/app/runtime/protocol/: __init__.py  constants.py  schemas.py  transitions.py  types.py
backend/app/schema/: __init__.py  agent.py  checkpoint.py  health.py  session.py  task.py  task_step.py  user.py  user_preference.py
backend/app/scripts/: seed_agents.py
backend/app/service/: __init__.py  agent.py  cost.py  metrics_cache.py  preference_extractor.py  session.py  session_cache.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_exception_handlers.py  test_main.py
backend/tests/core/: __init__.py  test_logging.py
backend/tests/infra/: test_llm.py  test_postgres.py  test_redis.py
backend/tests/model/: test_models.py
backend/tests/protocol/: test_schemas_v25.py  test_transitions_v25.py
backend/tests/repository/: test_user.py
backend/tests/service/: test_agent.py  test_cost.py  test_session.py  test_session_cache.py
backend/worker/: __init__.py  browser_manager.py  heartbeat_sender.py  main.py  stdin_listener.py  stdout_emitter.py  worker_session.py
backend/worker/skill/: __init__.py  base.py  browser_skill.py  registry.py  risk_heuristics.py
docs/: architecture.md  assumptions.md  dev_without_docker.md  doc_writing_rules.md  pending_features.md  phase_0_design.md  tech_selection.md
docs/issues/: 2026-06-03-tests-expose-4-hidden-bugs.md  2026-06-10-task-status-stuck-pending.md  2026-06-10-workspace-input-locked-by-stale-task.md
docs/plans/: 2026-06-04-llm-streaming-design.md  2026-06-06-phase1-data-layer-design.md  2026-06-08-browser-agent-execution-engine-design.md  2026-06-09-memory-system-design.md  2026-06-11-agent-runtime-v2.5-design.md  2026-06-11-agents-api-v2-design.md
docs/snippets/: logging_api.py  logging_module_api.py
frontend/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts  前端请求文档与接口对比.md
frontend/docs/: DESIGN.md  code (2).html  code (3).html  code (4).html  code (5).html  code.html
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/(workspace)/: layout.tsx
frontend/src/app/(workspace)/agent/: page.tsx
frontend/src/app/(workspace)/dashboard/: loading.tsx  page.tsx
frontend/src/app/(workspace)/settings/: page.tsx
frontend/src/app/(workspace)/tasks/: page.tsx
frontend/src/components/agent/: index.ts
frontend/src/components/agent/AgentWorkspace/: AgentWorkspace.tsx
frontend/src/components/dashboard/: DashboardHeader.tsx  index.ts
frontend/src/components/shared/: PlaceholderShell.tsx  index.ts
frontend/src/lib/: cn.ts
frontend/src/lib/api/: agents.ts  auth.ts  client.ts  health.ts  preferences.ts  stats.ts  tasks.ts  timeline.ts
frontend/src/lib/format/: currency.ts  duration.ts  number.ts  time.ts
frontend/src/lib/query/: agents.ts  client.ts  keys.ts  stats.ts  tasks.ts  timeline.ts
frontend/src/lib/store/: agent-workspace.ts  auth-modal.ts  auth.ts  ui.ts
frontend/src/lib/validations/: auth.ts
frontend/src/lib/ws/: backoff.ts  task-stream.ts  use-task-stream.ts  ws-url.ts
frontend/src/styles/: globals.css
frontend/src/types/: agent.ts  api.ts  auth.ts  chat.ts  health.ts  preference.ts  stats.ts  task.ts  timeline.ts
frontend/tests/: setup.ts
frontend/tests/components/: StatusBadge.test.tsx
frontend/tests/lib/: cn.test.ts
frontend/tests/lib/format/: currency.test.ts  number.test.ts  time.test.ts
(+49 files in other folders)
