[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=0.3.7",
    "langgraph>=1.2.4",
    "langsmith>=0.3.0",
    "mypy>=2.1.0",
    "openai==2.41.0",
    "playwright>=1.60.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "ruff>=0.15.15",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tiktoken==0.13.0",
    "uvicorn[standard]>=0.48.0",
]
