[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=0.3.7",
    "langgraph>=1.2.4",
    "langsmith>=0.3.0",
    "mypy>=2.1.0",
    "openai==2.41.0",
    "playwright>=1.60.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "ruff>=0.15.15",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tiktoken==0.13.0",
    "uvicorn[standard]>=0.48.0",
]

[tool.pytest.ini_options]
# pytest-asyncio:auto 模式 → 所有 async test 自动识别,无需 per-test 标注,
# sync test 也不再被强制走 asyncio(消除 "marked as asyncio but not async" 警告)。
# 现有 conftest.py 已注入 LLM_API_KEY 等必填 secrets,无需额外 env。
asyncio_mode = "auto"

# ──────────────────────────────────────────────────────────────
# Ruff:line-length=100 + black 兼容;规则集 E/F/W/I/UP/B/SIM。
# B008 例外:FastAPI 的 Depends() / Query() 等合法用法会触发
# "function call in argument defaults" 误报,在业务侧手动豁免。
# alembic 模板 / .venv 不参与 lint(模板由 alembic 官方维护)。
# ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions/*", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long — 由 formatter 把控,不二次报警
    "B008",   # FastAPI Depends()/Query() 在参数默认位置是合法用法
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许 assert、不强制类型(测试重点是行为不是签名)
"tests/**" = ["B011", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ──────────────────────────────────────────────────────────────
# Mypy:中等严格度。Phase 0 优先把"必须有签名"和"Optional 显式化"卡住,
# return_any / strict_equality 在 Phase 1 之后视存量错数量再升 strict。
# pydantic plugin 必加 — 否则 BaseModel 字段类型推断会全错。
# overrides:tests 放宽(签名不是重点)、alembic 模板豁免、
# 第三方大依赖(langchain/langgraph/openai/playwright)允许缺 stub。
# ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["alembic.*", "langchain.*", "langgraph.*", "openai.*", "playwright.*", "aioboto3.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true
